other/pdb-maxunavailable-with-deployments/.chainsaw-test/bad-pdb.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: bad-pdb01
spec:
  maxUnavailable: 0
  selector:
    matchLabels:
      app: busybox
