other/pdb-maxunavailable-with-deployments/.chainsaw-test/good-pdb.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-pdb01
spec:
  maxUnavailable: 0
  selector:
    matchLabels:
      app: busybox
