other/pdb-maxunavailable-with-deployments/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: pdb-maxunavailable-with-deployments
status:
  ready: true
